Fix readable builds when the frontend is javac.
PiperOrigin-RevId: 389285360